--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 16, 32, 68; /* Royal blue start */
+  --background-end-rgb: 19, 57, 89;   /* Royal blue end */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,13 +17,11 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #0F212E;
+}
+
+.cobra {
+  color: aliceblue;
 }
 
 @layer utilities {
